tests/snapshots/run_wpt_conformance__trtx_max_float32_2D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "max.https.any.js",
    "max float32 2D tensors",
    "trtx",
    "PASS",
)
