tests/snapshots/run_wpt_conformance__trtx_max_float32_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "max.https.any.js",
    "max float32 3D tensors",
    "trtx",
    "PASS",
)
